2023_01_18_CloudFormation/temp-ASG-ELB.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Bu tam anlamaiyla neredeyse ikinci Template

Parameters: 
  VPCParameter:
    Description: Select your VPC
    Type: AWS::EC2::VPC::Id
  
  SubnetParameter:
    Description: Select at least 2 subnets. "En az 2 subnet sec"
    Type: List<AWS::EC2::Subnet::Id> 

  InstanceTypeParameter:
    Description: Ec2 tipini sec bakalim
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.nano
      - t2.small
      - t1.micro

  KeyPairParameter:
    Description: KeyPair sec
    Type: AWS::EC2::KeyPair::KeyName 

Mappings: 
  RegionImageMap: 
    us-east-1: 
      AMI : "ami-0b5eea76982371e91"
    us-west-1: 
      AMI : "ami-0bdb828fd58c52235"
    eu-west-1: 
      AMI : "ami-047bb4163c506cd98"
    ap-southeast-1: 
      AMI : "ami-08569b978cc4dfa10"
    ap-northeast-1: 
      AMI : "ami-06cd52961ce9f0d85"
  
Resources:
  myALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties: 
      SecurityGroups:
        - !GetAtt mySG.GroupId 
      Subnets: !Ref SubnetParameter 
      Type: aplication

  myListner:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties: 
      DefaultActions: # Required
        - Type: forward
          TargetGroupArn: !Ref myTG
      LoadBalancerArn: !Ref myALB # Required
      Port: 80
      Protocol: HTTP

  myASG:
    myASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties: 
      DesiredCapacity: "2" 
      HealthCheckGracePeriod: 90
      HealthCheckType: ELB 
      LaunchTemplate:
        LaunchTemplateId: !Ref myLT 
        Version: 1
      MaxSize: 3 # Required 
      MinSize: 1 # Required 
      TargetGroupARNs:
        - !Ref myTG
      VPCZoneIdentifier: !Ref SubnetParameter

  myCPUPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties: 
      AutoScalingGroupName: !Ref myASG
      PolicyType: TargetTrackingScaling
      TargetTrackingConfiguration:
        PredefinedMetricSpecification:
            PredefinedMetricType: ASGAverageCPUUtilization
        TargetValue: 60.0

  myLT:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: !FindInMap 
          - RegionImageMap
          - !Ref AWS::Region
          - AMI
        InstanceType: !Ref InstanceTypeParameter
        KeyName: !Ref KeyPairParameter
        SecurityGroupIds:
          - !GetAtt mySG.GroupId
        UserData: !Base64 |
          #! /bin/bash
          yum update -y
          yum install -y httpd
          TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` \
          && PRIVATE_IP=`curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/local-ipv4`
          TOKEN=`curl -X PUT "http://169.254.169.254/latest/api/token" -H "X-aws-ec2-metadata-token-ttl-seconds: 21600"` \
          && PUBLIC_IP=`curl -H "X-aws-ec2-metadata-token: $TOKEN" http://169.254.169.254/latest/meta-data/public-ipv4` 
          DATE_TIME=`date`
          chmod -R 777 /var/www/html
          echo "<html>
          <head>
              <title> Congratulations! You have created an instance from Launch Template</title>
          </head>
          <body>
              <h1>This web server is launched from launch template by YOUR_NAME</h1>
              <p>This instance is created at <b>$DATE_TIME</b></p>
              <p>Private IP address of this instance is <b>$PRIVATE_IP</b></p>
              <p>Public IP address of this instance is <b>$PUBLIC_IP</b></p>
          </body>
          </html>" > /var/www/html/index.html
          systemctl start httpd
          systemctl enable httpd
      
  myTG:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties: 
      HealthCheckIntervalSeconds: 10 
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 5 
      Port: 80
      Protocol: HTTP 
      UnhealthyThresholdCount: 3
      VpcId: !Ref VPCParameter
      
  mySG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enables SSH and HTTP # Required  
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId: !Ref VPCParameter
  
Outputs:
  DNSofALB:
    Description: The DNSName of the backup load balancer
    Value: !Join
      - ''
      - - 'http://'
        - !GetAtt myALB.DNSName
